parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    STRING

Grammar

Rule 0     S' -> expression
Rule 1     expression -> expression PLUS term
Rule 2     expression -> expression MINUS term
Rule 3     expression -> term
Rule 4     term -> term MULTIPLY factor
Rule 5     term -> term DIVIDE factor
Rule 6     term -> factor
Rule 7     factor -> INT
Rule 8     factor -> FLOAT
Rule 9     factor -> LPAREN expression RPAREN
Rule 10    expression -> IF condition
Rule 11    expression -> ELIF expression : block
Rule 12    expression -> ELSE : block
Rule 13    expression -> WHILE condition block
Rule 14    condition -> expression AND expression
Rule 15    condition -> expression OR expression
Rule 16    expression -> NOT expression
Rule 17    expression -> PRINT LPAREN expression RPAREN
Rule 18    expression -> LEN LPAREN ID RPAREN
Rule 19    expression -> MAX LPAREN ID RPAREN
Rule 20    condition -> expression EQ expression
Rule 21    condition -> expression DIST expression
Rule 22    condition -> expression MAYQ expression
Rule 23    condition -> expression MENQ expression
Rule 24    block -> expression
Rule 25    block -> expression PTCOMA
Rule 26    block -> block expression
Rule 27    block -> block expression PTCOMA

Terminals, with rules where they appear

:                    : 11 12
AND                  : 14
COMMENT              : 
DIST                 : 21
DIVIDE               : 5
ELIF                 : 11
ELSE                 : 12
EQ                   : 20
FLOAT                : 8
ID                   : 18 19
IF                   : 10
INT                  : 7
LEN                  : 18
LPAREN               : 9 17 18 19
MAX                  : 19
MAYQ                 : 22
MENQ                 : 23
MINUS                : 2
MULTIPLY             : 4
NOT                  : 16
OR                   : 15
PLUS                 : 1
PRINT                : 17
PTCOMA               : 25 27
RPAREN               : 9 17 18 19
STRING               : 
WHILE                : 13
error                : 

Nonterminals, with rules where they appear

block                : 11 12 13 26 27
condition            : 10 13
expression           : 1 2 9 11 14 14 15 15 16 17 20 20 21 21 22 22 23 23 24 25 26 27 0
factor               : 4 5 6
term                 : 1 2 3 4 5

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MINUS term
    (3) expression -> . term
    (10) expression -> . IF condition
    (11) expression -> . ELIF expression : block
    (12) expression -> . ELSE : block
    (13) expression -> . WHILE condition block
    (16) expression -> . NOT expression
    (17) expression -> . PRINT LPAREN expression RPAREN
    (18) expression -> . LEN LPAREN ID RPAREN
    (19) expression -> . MAX LPAREN ID RPAREN
    (4) term -> . term MULTIPLY factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . INT
    (8) factor -> . FLOAT
    (9) factor -> . LPAREN expression RPAREN

    IF              shift and go to state 3
    ELIF            shift and go to state 4
    ELSE            shift and go to state 5
    WHILE           shift and go to state 6
    NOT             shift and go to state 7
    PRINT           shift and go to state 8
    LEN             shift and go to state 10
    MAX             shift and go to state 11
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    LPAREN          shift and go to state 9

    expression                     shift and go to state 1
    term                           shift and go to state 2
    factor                         shift and go to state 12

state 1

    (0) S' -> expression .
    (1) expression -> expression . PLUS term
    (2) expression -> expression . MINUS term

    PLUS            shift and go to state 15
    MINUS           shift and go to state 16


state 2

    (3) expression -> term .
    (4) term -> term . MULTIPLY factor
    (5) term -> term . DIVIDE factor

    PLUS            reduce using rule 3 (expression -> term .)
    MINUS           reduce using rule 3 (expression -> term .)
    $end            reduce using rule 3 (expression -> term .)
    AND             reduce using rule 3 (expression -> term .)
    OR              reduce using rule 3 (expression -> term .)
    EQ              reduce using rule 3 (expression -> term .)
    DIST            reduce using rule 3 (expression -> term .)
    MAYQ            reduce using rule 3 (expression -> term .)
    MENQ            reduce using rule 3 (expression -> term .)
    :               reduce using rule 3 (expression -> term .)
    RPAREN          reduce using rule 3 (expression -> term .)
    PTCOMA          reduce using rule 3 (expression -> term .)
    IF              reduce using rule 3 (expression -> term .)
    ELIF            reduce using rule 3 (expression -> term .)
    ELSE            reduce using rule 3 (expression -> term .)
    WHILE           reduce using rule 3 (expression -> term .)
    NOT             reduce using rule 3 (expression -> term .)
    PRINT           reduce using rule 3 (expression -> term .)
    LEN             reduce using rule 3 (expression -> term .)
    MAX             reduce using rule 3 (expression -> term .)
    INT             reduce using rule 3 (expression -> term .)
    FLOAT           reduce using rule 3 (expression -> term .)
    LPAREN          reduce using rule 3 (expression -> term .)
    MULTIPLY        shift and go to state 17
    DIVIDE          shift and go to state 18


state 3

    (10) expression -> IF . condition
    (14) condition -> . expression AND expression
    (15) condition -> . expression OR expression
    (20) condition -> . expression EQ expression
    (21) condition -> . expression DIST expression
    (22) condition -> . expression MAYQ expression
    (23) condition -> . expression MENQ expression
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MINUS term
    (3) expression -> . term
    (10) expression -> . IF condition
    (11) expression -> . ELIF expression : block
    (12) expression -> . ELSE : block
    (13) expression -> . WHILE condition block
    (16) expression -> . NOT expression
    (17) expression -> . PRINT LPAREN expression RPAREN
    (18) expression -> . LEN LPAREN ID RPAREN
    (19) expression -> . MAX LPAREN ID RPAREN
    (4) term -> . term MULTIPLY factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . INT
    (8) factor -> . FLOAT
    (9) factor -> . LPAREN expression RPAREN

    IF              shift and go to state 3
    ELIF            shift and go to state 4
    ELSE            shift and go to state 5
    WHILE           shift and go to state 6
    NOT             shift and go to state 7
    PRINT           shift and go to state 8
    LEN             shift and go to state 10
    MAX             shift and go to state 11
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    LPAREN          shift and go to state 9

    condition                      shift and go to state 19
    expression                     shift and go to state 20
    term                           shift and go to state 2
    factor                         shift and go to state 12

state 4

    (11) expression -> ELIF . expression : block
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MINUS term
    (3) expression -> . term
    (10) expression -> . IF condition
    (11) expression -> . ELIF expression : block
    (12) expression -> . ELSE : block
    (13) expression -> . WHILE condition block
    (16) expression -> . NOT expression
    (17) expression -> . PRINT LPAREN expression RPAREN
    (18) expression -> . LEN LPAREN ID RPAREN
    (19) expression -> . MAX LPAREN ID RPAREN
    (4) term -> . term MULTIPLY factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . INT
    (8) factor -> . FLOAT
    (9) factor -> . LPAREN expression RPAREN

    IF              shift and go to state 3
    ELIF            shift and go to state 4
    ELSE            shift and go to state 5
    WHILE           shift and go to state 6
    NOT             shift and go to state 7
    PRINT           shift and go to state 8
    LEN             shift and go to state 10
    MAX             shift and go to state 11
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    LPAREN          shift and go to state 9

    expression                     shift and go to state 21
    term                           shift and go to state 2
    factor                         shift and go to state 12

state 5

    (12) expression -> ELSE . : block

    :               shift and go to state 22


state 6

    (13) expression -> WHILE . condition block
    (14) condition -> . expression AND expression
    (15) condition -> . expression OR expression
    (20) condition -> . expression EQ expression
    (21) condition -> . expression DIST expression
    (22) condition -> . expression MAYQ expression
    (23) condition -> . expression MENQ expression
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MINUS term
    (3) expression -> . term
    (10) expression -> . IF condition
    (11) expression -> . ELIF expression : block
    (12) expression -> . ELSE : block
    (13) expression -> . WHILE condition block
    (16) expression -> . NOT expression
    (17) expression -> . PRINT LPAREN expression RPAREN
    (18) expression -> . LEN LPAREN ID RPAREN
    (19) expression -> . MAX LPAREN ID RPAREN
    (4) term -> . term MULTIPLY factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . INT
    (8) factor -> . FLOAT
    (9) factor -> . LPAREN expression RPAREN

    IF              shift and go to state 3
    ELIF            shift and go to state 4
    ELSE            shift and go to state 5
    WHILE           shift and go to state 6
    NOT             shift and go to state 7
    PRINT           shift and go to state 8
    LEN             shift and go to state 10
    MAX             shift and go to state 11
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    LPAREN          shift and go to state 9

    condition                      shift and go to state 23
    expression                     shift and go to state 20
    term                           shift and go to state 2
    factor                         shift and go to state 12

state 7

    (16) expression -> NOT . expression
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MINUS term
    (3) expression -> . term
    (10) expression -> . IF condition
    (11) expression -> . ELIF expression : block
    (12) expression -> . ELSE : block
    (13) expression -> . WHILE condition block
    (16) expression -> . NOT expression
    (17) expression -> . PRINT LPAREN expression RPAREN
    (18) expression -> . LEN LPAREN ID RPAREN
    (19) expression -> . MAX LPAREN ID RPAREN
    (4) term -> . term MULTIPLY factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . INT
    (8) factor -> . FLOAT
    (9) factor -> . LPAREN expression RPAREN

    IF              shift and go to state 3
    ELIF            shift and go to state 4
    ELSE            shift and go to state 5
    WHILE           shift and go to state 6
    NOT             shift and go to state 7
    PRINT           shift and go to state 8
    LEN             shift and go to state 10
    MAX             shift and go to state 11
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    LPAREN          shift and go to state 9

    expression                     shift and go to state 24
    term                           shift and go to state 2
    factor                         shift and go to state 12

state 8

    (17) expression -> PRINT . LPAREN expression RPAREN

    LPAREN          shift and go to state 25


state 9

    (9) factor -> LPAREN . expression RPAREN
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MINUS term
    (3) expression -> . term
    (10) expression -> . IF condition
    (11) expression -> . ELIF expression : block
    (12) expression -> . ELSE : block
    (13) expression -> . WHILE condition block
    (16) expression -> . NOT expression
    (17) expression -> . PRINT LPAREN expression RPAREN
    (18) expression -> . LEN LPAREN ID RPAREN
    (19) expression -> . MAX LPAREN ID RPAREN
    (4) term -> . term MULTIPLY factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . INT
    (8) factor -> . FLOAT
    (9) factor -> . LPAREN expression RPAREN

    IF              shift and go to state 3
    ELIF            shift and go to state 4
    ELSE            shift and go to state 5
    WHILE           shift and go to state 6
    NOT             shift and go to state 7
    PRINT           shift and go to state 8
    LEN             shift and go to state 10
    MAX             shift and go to state 11
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    LPAREN          shift and go to state 9

    expression                     shift and go to state 26
    term                           shift and go to state 2
    factor                         shift and go to state 12

state 10

    (18) expression -> LEN . LPAREN ID RPAREN

    LPAREN          shift and go to state 27


state 11

    (19) expression -> MAX . LPAREN ID RPAREN

    LPAREN          shift and go to state 28


state 12

    (6) term -> factor .

    MULTIPLY        reduce using rule 6 (term -> factor .)
    DIVIDE          reduce using rule 6 (term -> factor .)
    PLUS            reduce using rule 6 (term -> factor .)
    MINUS           reduce using rule 6 (term -> factor .)
    $end            reduce using rule 6 (term -> factor .)
    AND             reduce using rule 6 (term -> factor .)
    OR              reduce using rule 6 (term -> factor .)
    EQ              reduce using rule 6 (term -> factor .)
    DIST            reduce using rule 6 (term -> factor .)
    MAYQ            reduce using rule 6 (term -> factor .)
    MENQ            reduce using rule 6 (term -> factor .)
    :               reduce using rule 6 (term -> factor .)
    RPAREN          reduce using rule 6 (term -> factor .)
    PTCOMA          reduce using rule 6 (term -> factor .)
    IF              reduce using rule 6 (term -> factor .)
    ELIF            reduce using rule 6 (term -> factor .)
    ELSE            reduce using rule 6 (term -> factor .)
    WHILE           reduce using rule 6 (term -> factor .)
    NOT             reduce using rule 6 (term -> factor .)
    PRINT           reduce using rule 6 (term -> factor .)
    LEN             reduce using rule 6 (term -> factor .)
    MAX             reduce using rule 6 (term -> factor .)
    INT             reduce using rule 6 (term -> factor .)
    FLOAT           reduce using rule 6 (term -> factor .)
    LPAREN          reduce using rule 6 (term -> factor .)


state 13

    (7) factor -> INT .

    MULTIPLY        reduce using rule 7 (factor -> INT .)
    DIVIDE          reduce using rule 7 (factor -> INT .)
    PLUS            reduce using rule 7 (factor -> INT .)
    MINUS           reduce using rule 7 (factor -> INT .)
    $end            reduce using rule 7 (factor -> INT .)
    AND             reduce using rule 7 (factor -> INT .)
    OR              reduce using rule 7 (factor -> INT .)
    EQ              reduce using rule 7 (factor -> INT .)
    DIST            reduce using rule 7 (factor -> INT .)
    MAYQ            reduce using rule 7 (factor -> INT .)
    MENQ            reduce using rule 7 (factor -> INT .)
    :               reduce using rule 7 (factor -> INT .)
    RPAREN          reduce using rule 7 (factor -> INT .)
    PTCOMA          reduce using rule 7 (factor -> INT .)
    IF              reduce using rule 7 (factor -> INT .)
    ELIF            reduce using rule 7 (factor -> INT .)
    ELSE            reduce using rule 7 (factor -> INT .)
    WHILE           reduce using rule 7 (factor -> INT .)
    NOT             reduce using rule 7 (factor -> INT .)
    PRINT           reduce using rule 7 (factor -> INT .)
    LEN             reduce using rule 7 (factor -> INT .)
    MAX             reduce using rule 7 (factor -> INT .)
    INT             reduce using rule 7 (factor -> INT .)
    FLOAT           reduce using rule 7 (factor -> INT .)
    LPAREN          reduce using rule 7 (factor -> INT .)


state 14

    (8) factor -> FLOAT .

    MULTIPLY        reduce using rule 8 (factor -> FLOAT .)
    DIVIDE          reduce using rule 8 (factor -> FLOAT .)
    PLUS            reduce using rule 8 (factor -> FLOAT .)
    MINUS           reduce using rule 8 (factor -> FLOAT .)
    $end            reduce using rule 8 (factor -> FLOAT .)
    AND             reduce using rule 8 (factor -> FLOAT .)
    OR              reduce using rule 8 (factor -> FLOAT .)
    EQ              reduce using rule 8 (factor -> FLOAT .)
    DIST            reduce using rule 8 (factor -> FLOAT .)
    MAYQ            reduce using rule 8 (factor -> FLOAT .)
    MENQ            reduce using rule 8 (factor -> FLOAT .)
    :               reduce using rule 8 (factor -> FLOAT .)
    RPAREN          reduce using rule 8 (factor -> FLOAT .)
    PTCOMA          reduce using rule 8 (factor -> FLOAT .)
    IF              reduce using rule 8 (factor -> FLOAT .)
    ELIF            reduce using rule 8 (factor -> FLOAT .)
    ELSE            reduce using rule 8 (factor -> FLOAT .)
    WHILE           reduce using rule 8 (factor -> FLOAT .)
    NOT             reduce using rule 8 (factor -> FLOAT .)
    PRINT           reduce using rule 8 (factor -> FLOAT .)
    LEN             reduce using rule 8 (factor -> FLOAT .)
    MAX             reduce using rule 8 (factor -> FLOAT .)
    INT             reduce using rule 8 (factor -> FLOAT .)
    FLOAT           reduce using rule 8 (factor -> FLOAT .)
    LPAREN          reduce using rule 8 (factor -> FLOAT .)


state 15

    (1) expression -> expression PLUS . term
    (4) term -> . term MULTIPLY factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . INT
    (8) factor -> . FLOAT
    (9) factor -> . LPAREN expression RPAREN

    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    LPAREN          shift and go to state 9

    term                           shift and go to state 29
    factor                         shift and go to state 12

state 16

    (2) expression -> expression MINUS . term
    (4) term -> . term MULTIPLY factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . INT
    (8) factor -> . FLOAT
    (9) factor -> . LPAREN expression RPAREN

    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    LPAREN          shift and go to state 9

    term                           shift and go to state 30
    factor                         shift and go to state 12

state 17

    (4) term -> term MULTIPLY . factor
    (7) factor -> . INT
    (8) factor -> . FLOAT
    (9) factor -> . LPAREN expression RPAREN

    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    LPAREN          shift and go to state 9

    factor                         shift and go to state 31

state 18

    (5) term -> term DIVIDE . factor
    (7) factor -> . INT
    (8) factor -> . FLOAT
    (9) factor -> . LPAREN expression RPAREN

    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    LPAREN          shift and go to state 9

    factor                         shift and go to state 32

state 19

    (10) expression -> IF condition .

    PLUS            reduce using rule 10 (expression -> IF condition .)
    MINUS           reduce using rule 10 (expression -> IF condition .)
    $end            reduce using rule 10 (expression -> IF condition .)
    AND             reduce using rule 10 (expression -> IF condition .)
    OR              reduce using rule 10 (expression -> IF condition .)
    EQ              reduce using rule 10 (expression -> IF condition .)
    DIST            reduce using rule 10 (expression -> IF condition .)
    MAYQ            reduce using rule 10 (expression -> IF condition .)
    MENQ            reduce using rule 10 (expression -> IF condition .)
    :               reduce using rule 10 (expression -> IF condition .)
    RPAREN          reduce using rule 10 (expression -> IF condition .)
    PTCOMA          reduce using rule 10 (expression -> IF condition .)
    IF              reduce using rule 10 (expression -> IF condition .)
    ELIF            reduce using rule 10 (expression -> IF condition .)
    ELSE            reduce using rule 10 (expression -> IF condition .)
    WHILE           reduce using rule 10 (expression -> IF condition .)
    NOT             reduce using rule 10 (expression -> IF condition .)
    PRINT           reduce using rule 10 (expression -> IF condition .)
    LEN             reduce using rule 10 (expression -> IF condition .)
    MAX             reduce using rule 10 (expression -> IF condition .)
    INT             reduce using rule 10 (expression -> IF condition .)
    FLOAT           reduce using rule 10 (expression -> IF condition .)
    LPAREN          reduce using rule 10 (expression -> IF condition .)


state 20

    (14) condition -> expression . AND expression
    (15) condition -> expression . OR expression
    (20) condition -> expression . EQ expression
    (21) condition -> expression . DIST expression
    (22) condition -> expression . MAYQ expression
    (23) condition -> expression . MENQ expression
    (1) expression -> expression . PLUS term
    (2) expression -> expression . MINUS term

    AND             shift and go to state 33
    OR              shift and go to state 34
    EQ              shift and go to state 35
    DIST            shift and go to state 36
    MAYQ            shift and go to state 37
    MENQ            shift and go to state 38
    PLUS            shift and go to state 15
    MINUS           shift and go to state 16


state 21

    (11) expression -> ELIF expression . : block
    (1) expression -> expression . PLUS term
    (2) expression -> expression . MINUS term

    :               shift and go to state 39
    PLUS            shift and go to state 15
    MINUS           shift and go to state 16


state 22

    (12) expression -> ELSE : . block
    (24) block -> . expression
    (25) block -> . expression PTCOMA
    (26) block -> . block expression
    (27) block -> . block expression PTCOMA
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MINUS term
    (3) expression -> . term
    (10) expression -> . IF condition
    (11) expression -> . ELIF expression : block
    (12) expression -> . ELSE : block
    (13) expression -> . WHILE condition block
    (16) expression -> . NOT expression
    (17) expression -> . PRINT LPAREN expression RPAREN
    (18) expression -> . LEN LPAREN ID RPAREN
    (19) expression -> . MAX LPAREN ID RPAREN
    (4) term -> . term MULTIPLY factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . INT
    (8) factor -> . FLOAT
    (9) factor -> . LPAREN expression RPAREN

    IF              shift and go to state 3
    ELIF            shift and go to state 4
    ELSE            shift and go to state 5
    WHILE           shift and go to state 6
    NOT             shift and go to state 7
    PRINT           shift and go to state 8
    LEN             shift and go to state 10
    MAX             shift and go to state 11
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    LPAREN          shift and go to state 9

    block                          shift and go to state 40
    expression                     shift and go to state 41
    term                           shift and go to state 2
    factor                         shift and go to state 12

state 23

    (13) expression -> WHILE condition . block
    (24) block -> . expression
    (25) block -> . expression PTCOMA
    (26) block -> . block expression
    (27) block -> . block expression PTCOMA
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MINUS term
    (3) expression -> . term
    (10) expression -> . IF condition
    (11) expression -> . ELIF expression : block
    (12) expression -> . ELSE : block
    (13) expression -> . WHILE condition block
    (16) expression -> . NOT expression
    (17) expression -> . PRINT LPAREN expression RPAREN
    (18) expression -> . LEN LPAREN ID RPAREN
    (19) expression -> . MAX LPAREN ID RPAREN
    (4) term -> . term MULTIPLY factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . INT
    (8) factor -> . FLOAT
    (9) factor -> . LPAREN expression RPAREN

    IF              shift and go to state 3
    ELIF            shift and go to state 4
    ELSE            shift and go to state 5
    WHILE           shift and go to state 6
    NOT             shift and go to state 7
    PRINT           shift and go to state 8
    LEN             shift and go to state 10
    MAX             shift and go to state 11
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    LPAREN          shift and go to state 9

    block                          shift and go to state 42
    expression                     shift and go to state 41
    term                           shift and go to state 2
    factor                         shift and go to state 12

state 24

    (16) expression -> NOT expression .
    (1) expression -> expression . PLUS term
    (2) expression -> expression . MINUS term

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
    $end            reduce using rule 16 (expression -> NOT expression .)
    AND             reduce using rule 16 (expression -> NOT expression .)
    OR              reduce using rule 16 (expression -> NOT expression .)
    EQ              reduce using rule 16 (expression -> NOT expression .)
    DIST            reduce using rule 16 (expression -> NOT expression .)
    MAYQ            reduce using rule 16 (expression -> NOT expression .)
    MENQ            reduce using rule 16 (expression -> NOT expression .)
    :               reduce using rule 16 (expression -> NOT expression .)
    RPAREN          reduce using rule 16 (expression -> NOT expression .)
    PTCOMA          reduce using rule 16 (expression -> NOT expression .)
    IF              reduce using rule 16 (expression -> NOT expression .)
    ELIF            reduce using rule 16 (expression -> NOT expression .)
    ELSE            reduce using rule 16 (expression -> NOT expression .)
    WHILE           reduce using rule 16 (expression -> NOT expression .)
    NOT             reduce using rule 16 (expression -> NOT expression .)
    PRINT           reduce using rule 16 (expression -> NOT expression .)
    LEN             reduce using rule 16 (expression -> NOT expression .)
    MAX             reduce using rule 16 (expression -> NOT expression .)
    INT             reduce using rule 16 (expression -> NOT expression .)
    FLOAT           reduce using rule 16 (expression -> NOT expression .)
    LPAREN          reduce using rule 16 (expression -> NOT expression .)
    PLUS            shift and go to state 15
    MINUS           shift and go to state 16

  ! PLUS            [ reduce using rule 16 (expression -> NOT expression .) ]
  ! MINUS           [ reduce using rule 16 (expression -> NOT expression .) ]


state 25

    (17) expression -> PRINT LPAREN . expression RPAREN
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MINUS term
    (3) expression -> . term
    (10) expression -> . IF condition
    (11) expression -> . ELIF expression : block
    (12) expression -> . ELSE : block
    (13) expression -> . WHILE condition block
    (16) expression -> . NOT expression
    (17) expression -> . PRINT LPAREN expression RPAREN
    (18) expression -> . LEN LPAREN ID RPAREN
    (19) expression -> . MAX LPAREN ID RPAREN
    (4) term -> . term MULTIPLY factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . INT
    (8) factor -> . FLOAT
    (9) factor -> . LPAREN expression RPAREN

    IF              shift and go to state 3
    ELIF            shift and go to state 4
    ELSE            shift and go to state 5
    WHILE           shift and go to state 6
    NOT             shift and go to state 7
    PRINT           shift and go to state 8
    LEN             shift and go to state 10
    MAX             shift and go to state 11
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    LPAREN          shift and go to state 9

    expression                     shift and go to state 43
    term                           shift and go to state 2
    factor                         shift and go to state 12

state 26

    (9) factor -> LPAREN expression . RPAREN
    (1) expression -> expression . PLUS term
    (2) expression -> expression . MINUS term

    RPAREN          shift and go to state 44
    PLUS            shift and go to state 15
    MINUS           shift and go to state 16


state 27

    (18) expression -> LEN LPAREN . ID RPAREN

    ID              shift and go to state 45


state 28

    (19) expression -> MAX LPAREN . ID RPAREN

    ID              shift and go to state 46


state 29

    (1) expression -> expression PLUS term .
    (4) term -> term . MULTIPLY factor
    (5) term -> term . DIVIDE factor

    PLUS            reduce using rule 1 (expression -> expression PLUS term .)
    MINUS           reduce using rule 1 (expression -> expression PLUS term .)
    $end            reduce using rule 1 (expression -> expression PLUS term .)
    AND             reduce using rule 1 (expression -> expression PLUS term .)
    OR              reduce using rule 1 (expression -> expression PLUS term .)
    EQ              reduce using rule 1 (expression -> expression PLUS term .)
    DIST            reduce using rule 1 (expression -> expression PLUS term .)
    MAYQ            reduce using rule 1 (expression -> expression PLUS term .)
    MENQ            reduce using rule 1 (expression -> expression PLUS term .)
    :               reduce using rule 1 (expression -> expression PLUS term .)
    RPAREN          reduce using rule 1 (expression -> expression PLUS term .)
    PTCOMA          reduce using rule 1 (expression -> expression PLUS term .)
    IF              reduce using rule 1 (expression -> expression PLUS term .)
    ELIF            reduce using rule 1 (expression -> expression PLUS term .)
    ELSE            reduce using rule 1 (expression -> expression PLUS term .)
    WHILE           reduce using rule 1 (expression -> expression PLUS term .)
    NOT             reduce using rule 1 (expression -> expression PLUS term .)
    PRINT           reduce using rule 1 (expression -> expression PLUS term .)
    LEN             reduce using rule 1 (expression -> expression PLUS term .)
    MAX             reduce using rule 1 (expression -> expression PLUS term .)
    INT             reduce using rule 1 (expression -> expression PLUS term .)
    FLOAT           reduce using rule 1 (expression -> expression PLUS term .)
    LPAREN          reduce using rule 1 (expression -> expression PLUS term .)
    MULTIPLY        shift and go to state 17
    DIVIDE          shift and go to state 18


state 30

    (2) expression -> expression MINUS term .
    (4) term -> term . MULTIPLY factor
    (5) term -> term . DIVIDE factor

    PLUS            reduce using rule 2 (expression -> expression MINUS term .)
    MINUS           reduce using rule 2 (expression -> expression MINUS term .)
    $end            reduce using rule 2 (expression -> expression MINUS term .)
    AND             reduce using rule 2 (expression -> expression MINUS term .)
    OR              reduce using rule 2 (expression -> expression MINUS term .)
    EQ              reduce using rule 2 (expression -> expression MINUS term .)
    DIST            reduce using rule 2 (expression -> expression MINUS term .)
    MAYQ            reduce using rule 2 (expression -> expression MINUS term .)
    MENQ            reduce using rule 2 (expression -> expression MINUS term .)
    :               reduce using rule 2 (expression -> expression MINUS term .)
    RPAREN          reduce using rule 2 (expression -> expression MINUS term .)
    PTCOMA          reduce using rule 2 (expression -> expression MINUS term .)
    IF              reduce using rule 2 (expression -> expression MINUS term .)
    ELIF            reduce using rule 2 (expression -> expression MINUS term .)
    ELSE            reduce using rule 2 (expression -> expression MINUS term .)
    WHILE           reduce using rule 2 (expression -> expression MINUS term .)
    NOT             reduce using rule 2 (expression -> expression MINUS term .)
    PRINT           reduce using rule 2 (expression -> expression MINUS term .)
    LEN             reduce using rule 2 (expression -> expression MINUS term .)
    MAX             reduce using rule 2 (expression -> expression MINUS term .)
    INT             reduce using rule 2 (expression -> expression MINUS term .)
    FLOAT           reduce using rule 2 (expression -> expression MINUS term .)
    LPAREN          reduce using rule 2 (expression -> expression MINUS term .)
    MULTIPLY        shift and go to state 17
    DIVIDE          shift and go to state 18


state 31

    (4) term -> term MULTIPLY factor .
